move geoalchemy2 to non pixi deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ version = "0.1.0"
 dependencies = [
     "requests>=2.32.3,<3",
     "sqlalchemy",
+    "geoalchemy2",
     ]
 
 # [project.urls]
@@ -53,7 +54,6 @@ test = "pytest"
 
 [tool.pixi.dependencies]
 python = ">=3.11"
-geoalchemy2 = ">=0.17.1,<0.18"
 
 # [tool.pixi.feature.diagram.tasks]
 # diagram = "python -m py2puml"
