--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,7 @@ requires-python = ">= 3.11"
 version = "0.1.0"
 dependencies = [
     "requests>=2.32.3,<3",
-    "sqlalchemy",
-    "geoalchemy2",
+    "sqlalchemy", "geoalchemy2>=0.18.0,<0.19", "geopandas>=1.1.1,<2",
     ]
 
 # [project.urls]
